updated slides, adding router

--- a/ha/mods/com.burrsutter~ha~1.0/index.html
+++ b/ha/mods/com.burrsutter~ha~1.0/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/sockjs-client/0.3.4/sockjs.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/vertx/2.0.0/vertxbus.min.js"></script>  
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="sockjs-0.2.1.min.js"></script>
+<script src="vertxbus.js"></script>  
+<script src="jquery-1.7.1.min.js"></script>
 </head>	
 <body>
 <div id="status"></div> 
